# git-basics-training-assignment-merging

./: .gitignore  README.md  README.md.license  aportsknife.py  pyproject.toml  setup.cfg  setup.py
aportsknife/: __init__.py  __main__.py  actions.py  package.py  repository.py  selectors.py  settings.py
